--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -41,9 +41,7 @@
             <div>
                 <article>
                     <h2>Camiseta de clubes nacionales e internacionales</h2>
-                    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto voluptates explicabo ipsum,
-                        laudantium tenetur autem molestiae! Quis fuga ex fugiat at? Maxime non nulla itaque accusantium
-                        accusamus exercitationem repellat delectus.</P>
+                    <P>Camisetas Tres Estrellas, el hogar de las camisetas de fútbol de clubes nacionales e internacionales. Aquí, los aficionados al fútbol pueden encontrar una amplia variedad de camisetas de sus equipos favoritos, tanto de ligas locales como de competiciones internacionales. Cada camiseta cuenta una historia, cada una es un recuerdo de un partido emocionante, un campeonato ganado, o un momento de gloria. Nuestra misión es conectar a los fanáticos del fútbol con estos momentos a través de nuestras camisetas. ¡Explora nuestra colección y lleva la pasión del fútbol a tu vida diaria!</P>
                 </article>
 
                 <div class="icono-wsapp">
@@ -193,14 +191,14 @@
             <div class="footer-redes">
 
                 <h4>Nuestras Redes</h4>
-                <ul>
+                
                     <ul>
                         <li><a href=""><i class="bi bi-instagram"></i> Instagram</a></li>
                         <li><a href=""><i class="bi bi-twitter"></i> Twitter</a></li>
                         <li><a href=""><i class="bi bi-facebook"></i> Facebook</a></li>
                         <li><a href=""><i class="bi bi-tiktok"></i> TikTok</a></li>
                     </ul>
-                </ul>
+                
 
 
             </div>
@@ -208,7 +206,7 @@
             <div class="footer-newsletter">
                 <h4>Suscribete a nuestro NewsLetter</h4>
                 <form action="">
-                    <input type="email">
+                    <input type="email" placeholder="email">
                     <input type="submit" value="Suscribirme">
                 </form>
 
