--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,7 +44,7 @@
             
             <div class="cont-contacto">
 
-                <img src="/img/messiformulariodos.jpeg" alt="">
+                <img src="/img/campeonesformulario.png" alt="">
 
                 <form action="" class="form-contacto">
 
@@ -138,7 +138,7 @@
             <div class="footer-newsletter">
                 <h4>Suscribete a nuestro NewsLetter</h4>
                 <form action="">
-                    <input type="email">
+                    <input type="email" placeholder="email">
                     <input type="submit" value="Suscribirme">
                 </form>
 
