--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
             <div class="footer-redes">
 
                 <h4>Nuestras Redes :</h4>
-                <ul>
+                
                     <ul>
                         <li><a href=""><i class="bi bi-instagram"></i> Instagram</a></li>
                         <li><a href=""><i class="bi bi-twitter"></i> Twitter</a></li>
                         <li><a href=""><i class="bi bi-facebook"></i> Facebook</a></li>
                         <li><a href=""><i class="bi bi-tiktok"></i> TikTok</a></li>
                     </ul>
-                </ul>
+                
 
 
             </div>
@@ -103,7 +103,7 @@
             <div class="footer-newsletter">
                 <h4>Suscribete a nuestro NewsLetter</h4>
                 <form action="">
-                    <input type="email">
+                    <input type="email" placeholder="email">
                     <input type="submit" value="Suscribirme">
                 </form>
 
@@ -118,7 +118,9 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
