--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="clubescamisetatresestrllas">
     <title>Clubes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -180,7 +181,7 @@
 
             <div class="footer-info">
                 <h4>info</h4>
-                <img src="/img/minilogo.jpg" alt="">
+                <img src="/img/minilogo.jpg" alt="logodeestrella">
 
             <p>balestrierimt@gmail.com</p>
             <p>+54 11 1111 4889</p>
