--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="contactocamisetatresestrllas">
     <title>Contacto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +45,7 @@
             
             <div class="cont-contacto">
 
-                <img src="/img/campeonesformulario.png" alt="">
+                <img src="/img/campeonesformulario.png" alt="argentinalevantandolacopa">
 
                 <form action="" class="form-contacto">
 
@@ -114,7 +115,7 @@
 
             <div class="footer-info">
                 <h4>info</h4>
-                <img src="/img/minilogo.jpg" alt="">
+                <img src="/img/minilogo.jpg" alt="logodeestrella">
 
             <p>balestrierimt@gmail.com</p>
             <p>+54 11 1111 4889</p>
