--- a/pages/selecciones.html
+++ b/pages/selecciones.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="seleccionescamisetatresestrllas">
+    <meta name="description" content="Bienvenidos a la seccion de selecciones de la tienda de camisetas tres estrellas">
     <title>Selecciones</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -205,10 +205,10 @@
         <div class="conatainer footer-wrapper">
 
             <div class="footer-info">
-                <h4>info</h4>
-                <img src="/img/minilogo.jpg" alt="logodeestrella">
+                <h4>Info</h4>
+                <img src="/img/fotofooterblanca.png" alt="logodeestrella">
 
-                <p>balestrierimt@gmail.com</p>
+                <p>Camisetastresestrellas@gmail.com</p>
                 <p>+54 11 1111 4889</p>
 
 
