modificaciones de rutas de imagenes

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
             
             <div class="cont-contacto">
 
-                <img src="/img/fotosmessiformularioprueba.png" alt="messibesandolacopa">
+                <img src="../img/campeonesformulario.png" alt="messibesandolacopa">
 
                 <form action="" class="form-contacto">
 
@@ -115,7 +115,7 @@
 
             <div class="footer-info">
                 <h4>Info</h4>
-                <img src="/img/fotofooterblanca.png" alt="logodeestrella">
+                <img src="../img/fotofooterblanca.png" alt="logodeestrella">
 
             <p>Camisetastresestrellas@gmail.com</p>
             <p>+54 11 1111 4889</p>
