--- a/pages/selecciones.html
+++ b/pages/selecciones.html
@@ -206,7 +206,7 @@
 
             <div class="footer-info">
                 <h4>Info</h4>
-                <img src="/img/fotofooterblanca.png" alt="logodeestrella">
+                <img src="../img/fotofooterblanca.png" alt="logodeestrella">
 
                 <p>Camisetastresestrellas@gmail.com</p>
                 <p>+54 11 1111 4889</p>
