agregue nuevas fotos para las secciones

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
                 <div class="cont-galeria">
                     <img class="img-destacada" src="./img/diego.jpeg" alt="camisetadeboca">
-                    <img src="./img/ribersuplente.png" alt="camisetaderiver">
-                    <img src="./img/bocatitular.png" alt="camisetadeboca">
-                    <img src="./img/barcelona.png" alt="camisetadebarcelona">
-                    <img src="./img/afatitular.png" alt="camisetadeargentina">
+                    <img src="./img/bocamaradona.jpg" alt="camisetaderiver">
+                    <img src="./img/argentinatitular.jpg" alt="camisetadeboca">
+                    <img src="./img/francia.jpg" alt="camisetadebarcelona">
+                    <img src="./img/realmadridactual.jpg" alt="camisetadeargentina">
                 </div>
             </div>
 
