cambios en el index

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 <h3 class="galeria-titulo">Nuevos Ingresos 2024 </h3>
 
                 <div class="cont-galeria">
-                    <img class="img-destacada" src="./img/diego.jpeg" alt="camisetadeboca">
-                    <img src="./img/bocamaradona.jpg" alt="camisetaderiver">
-                    <img src="./img/argentinatitular.jpg" alt="camisetadeboca">
-                    <img src="./img/francia.jpg" alt="camisetadebarcelona">
-                    <img src="./img/realmadridactual.jpg" alt="camisetadeargentina">
+                    <img class="img-destacada" src="./img/diego.jpeg" alt="imagendiegobesandocopa">
+                    <img src="./img/bocamaradona.jpg" alt="camisetademaradona">
+                    <img src="./img/argentinatitular.jpg" alt="camisetadeargentina">
+                    <img src="./img/francia.jpg" alt="camisetadefrancia">
+                    <img src="./img/realmadridactual.jpg" alt="camisetadelrealmadrid">
                 </div>
             </div>
 
